# vlatrust

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
bench_results/: v0.1.0a1_falsification.json
docs/: architecture.d2
scripts/: honest_marketing_check.sh  measure_falsification.py  verify_step.py
src/vlatrust/: __init__.py  _seed.py
src/vlatrust/adapters/: __init__.py  base.py  lerobot_dataset.py  mock.py  normalize.py  policy_openpi.py  policy_openvla.py  policy_smolvla.py  recorded.py  sim_maniskill.py  sim_mujoco.py
src/vlatrust/core/: __init__.py  _stats.py  trace.py  types.py
src/vlatrust/core/collapse/: curve.py  fragility.py
src/vlatrust/core/conformal/: nonconformity.py  predictor.py  split.py
src/vlatrust/core/perturb/: algebra.py  inject.py  ops.py  ranking.py  registry.py
src/vlatrust/core/reliability/: calibrate.py  gap.py  ood_gate.py
src/vlatrust/core/score/: aggregate.py  scorecard.py
src/vlatrust/report/: cli.py  html.py  schema.py
tests/: conftest.py  synthetic.py  test_adapters.py  test_calibrate.py  test_cli.py  test_collapse.py  test_conformal.py  test_honest_marketing.py  test_inject.py  test_measurement.py  test_ood_gate.py  test_perturb.py  test_reliability_gap.py  test_report.py  test_score.py  test_stats.py  test_trace_io.py  test_types.py
